--- a/css/mall.less
+++ b/css/mall.less
@@ -233,8 +233,7 @@ header{
      top: 50%;
      left: 50%;
      background: #191d33;
-     margin-top: -5.10869565217391304rem;
-     margin-left: -6.717391304347826rem;
+     transform: translate(-50%,-50%);
      border-radius: 10/@base;
 }
  .cou_tit{
