--- a/css/signin.less
+++ b/css/signin.less
@@ -135,7 +135,7 @@ span{
     height: 101/@base;
     display: block;
     border: 0;
-    margin: 70/@base auto 36/@base auto;
+    margin: 40/@base auto 36/@base auto;
     font-size: 34/@base;
     color: white;
     background: #d8d8d8;
@@ -205,7 +205,14 @@ span{
     margin-top: 18/@base;
 }
 
-
+.message{
+    color: #FEA201;
+    font-size: 24/@base;
+    line-height: 30/@base;
+    margin-top: 30/@base;
+    padding-left: 35/@base;
+    height: 30/@base;
+}
 
 
 
