--- a/css/our.less
+++ b/css/our.less
@@ -156,7 +156,9 @@ li{
 .bor,.borb{ width: 733/@base; height: 2px; margin-left: 30/@base; background-color:#ebebeb ;}
 .borb{ width: 16rem; margin: 0; height: 20/@base;}
 .setup{
-    margin-top: 20/@base;
+    padding-top: 20/@base;
+    line-height: 60/@base;
+    box-sizing: border-box;
 }
 .wrapped{
     width: 764/@base;
@@ -176,8 +178,12 @@ li{
 .follow{
     background-position-y: -4.8rem;
 }
+.collection{
+    background: url('../img/collection.png') no-repeat left 10px center;
+    background-size: 46/@base;
+}
 .setup{
-    background-position-y: -6.3rem;
+    background-position-y: -6.48rem;
 }
 .wrapped{background: white;}
 footer{
