--- a/css/our.css
+++ b/css/our.css
@@ -171,7 +171,9 @@ li {
   height: 0.4rem;
 }
 .setup {
-  margin-top: 0.4rem;
+  padding-top: 0.4rem;
+  line-height: 1.2rem;
+  box-sizing: border-box;
 }
 .wrapped {
   width: 15.28rem;
@@ -191,8 +193,12 @@ li {
 .follow {
   background-position-y: -4.8rem;
 }
+.collection {
+  background: url('../img/collection.png') no-repeat left 10px center;
+  background-size: 0.92rem;
+}
 .setup {
-  background-position-y: -6.3rem;
+  background-position-y: -6.48rem;
 }
 .wrapped {
   background: white;
