--- a/css/register.css
+++ b/css/register.css
@@ -133,7 +133,7 @@ span {
   height: 2.02rem;
   display: block;
   border: 0;
-  margin: 1.4rem auto 0.72rem auto;
+  margin: 0.8rem auto 0.72rem auto;
   font-size: 0.68rem;
   color: white;
   background: #d8d8d8;
@@ -201,4 +201,12 @@ span {
   border-radius: 4px;
   margin-left: 0.94rem;
   margin-top: 0.36rem;
+}
+.message {
+  color: #FEA201;
+  font-size: 0.48rem;
+  line-height: 0.6rem;
+  margin-top: 0.6rem;
+  padding-left: 0.7rem;
+  height: 0.6rem;
 }
