--- a/css/userfollow.less
+++ b/css/userfollow.less
@@ -57,7 +57,7 @@ body,html{
             background: #fff;
         }
         .follow{
-            background: url('../img/guanzhu.png') no-repeat;
+            background: url('../img/guanzhu.png') no-repeat left top 3/@base;
             background-size: 30/@base 25/@base;
             margin-right: 25/@base;
         }
