--- a/css/broad.less
+++ b/css/broad.less
@@ -31,7 +31,7 @@ span{ cursor: pointer;}
     color: #4285F4 !important;
 }
 .small{
-    font-size: 32/@base !important;
+    font-size: 22/@base !important;
 }
 .banner{
     width: 764/@base;
@@ -75,15 +75,20 @@ span{ cursor: pointer;}
     color: #4c4c4c;
     margin-top: 5/@base;
 }
+.int_p p{
+    float: left;
+    margin-right: 25/@base;
+}
 .int_foot{
     width: 100%;
     overflow: hidden;
 }
 .int_zi{
     float: left;
-    font-size: 55/@base;
+    font-size: 38/@base;
     color: #ffa100;
     margin-right: 15/@base;
+    margin-top: 10/@base;
 }
 .int_peo{
    float: left;
@@ -148,14 +153,12 @@ span{ cursor: pointer;}
 .int_p span{    
    color: #4285F4;
    border: 1px solid #4285F4;
-   float: right;
-   margin-right: 10rem;
-   margin-top: 18/@base;
    height: 34/@base;
-   display: block;
    font-size: 20/@base;
    text-align: center;
    line-height: 34/@base;
    border-radius: 3/@base;
    padding: 0 3/@base;
-   }
+   float: left;
+   margin-top: 20/@base;
+}
