--- a/css/our.css
+++ b/css/our.css
@@ -41,10 +41,10 @@ span {
   /*border-bottom: 4/@base solid #4285f4;*/
   color: #4285F4 !important;
 }
-.head {
+.user {
   display: none;
 }
-.head,
+.user,
 .header {
   width: 15.28rem;
   height: 6.3rem;
@@ -127,7 +127,7 @@ span {
   width: 0.36rem;
   height: auto;
 }
-.head dt {
+.user dt {
   width: 2.84rem;
   height: 2.84rem;
   -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
@@ -137,7 +137,7 @@ span {
   overflow: hidden;
   margin-top: 1rem;
 }
-.head dd {
+.user dd {
   width: 100%;
   height: 2rem;
   line-height: 2rem;
@@ -202,53 +202,4 @@ li {
 }
 .wrapped {
   background: white;
-}
-footer {
-  width: 100%;
-  height: 2.02rem;
-  position: fixed;
-  bottom: 0;
-  background: white;
-  z-index: 2;
-  box-shadow: 0px 2px 0.38rem 0px rgba(66, 133, 244, 0.2);
-}
-footer dl {
-  width: 25%;
-  height: 100%;
-  text-align: center;
-  float: left;
-}
-footer dl dt {
-  width: 100%;
-  height: 0.68rem;
-  margin-top: 0.38rem;
-  overflow: hidden;
-}
-footer dl img {
-  display: block;
-  margin: 0 auto ;
-}
-footer dl dd {
-  line-height: 0.8rem;
-  height: 0.8rem;
-  width: 100%;
-  text-align: center;
-  color: #999999;
-  font-size: 0.44rem;
-}
-footer dl:first-child img {
-  width: 1rem;
-  height: 0.8rem;
-}
-footer dl:nth-child(2) img {
-  width: 0.72rem;
-  height: 0.66rem;
-}
-footer dl:nth-child(3) img {
-  width: 0.8rem;
-  height: 0.78rem;
-}
-footer dl:last-child img {
-  width: 0.8rem;
-  height: 0.88rem;
 }
