--- a/css/our.less
+++ b/css/our.less
@@ -42,8 +42,8 @@ span{
     /*border-bottom: 4/@base solid #4285f4;*/
     color: #4285F4 !important;
 }
-.head{ display: none;}
-.head,.header{
+.user{ display: none;}
+.user,.header{
     width: 764/@base;
     height: 315/@base;
     background-color: #4285f4;
@@ -122,7 +122,7 @@ span{
     height: auto;
 }
 
-.head dt{
+.user dt{
     width: 142/@base;
     height: 142/@base;
     -webkit-tap-highlight-color:rgba(255,0,0,0);
@@ -132,7 +132,7 @@ span{
     overflow: hidden;
     margin-top: 50/@base;
 }
-.head dd{
+.user dd{
     width: 100%;
     height:2rem;
     line-height: 2rem;
@@ -186,52 +186,3 @@ li{
     background-position-y: -6.48rem;
 }
 .wrapped{background: white;}
-footer{
-    width: 100%;
-    height: 101/@base;
-    position: fixed;
-    bottom: 0;
-    background: white;
-    z-index: 2;
-    box-shadow: 0px 2px 19/@base 0px rgba(66, 133, 244, 0.2);
-}
-footer dl{
-    width: 25%;
-    height: 100%;
-    text-align: center;
-    float: left;
-}
-footer dl dt{
-    width: 100%;
-    height: 34/@base;
-    margin-top: 19/@base;
-    overflow: hidden;
-}
-footer dl img{
-    display: block;
-    margin:0 auto ;
-}
-footer dl dd{
-    line-height: 40/@base;
-    height: 40/@base;
-    width: 100%;
-    text-align: center;
-    color: #999999;
-    font-size: 22/@base;
-}
-footer dl:first-child img{
-   width: 1rem;
-   height: 40/@base;
-}
-footer dl:nth-child(2) img{
-    width: 36/@base;
-    height: 33/@base;
-}
-footer dl:nth-child(3) img{
-   width: 40/@base;
-   height: 39/@base;
-}
-footer dl:last-child img{
-   width: 40/@base;
-   height: 44/@base;
-}
