--- a/css/public.less
+++ b/css/public.less
@@ -52,7 +52,7 @@ input[type=submit],input[type=reset],input[type=button],input[type=text]{-webkit
     text-indent: 68/@base;
     border-radius: 28/@base;
     position: absolute;
-    background:#f0f0f0 url(../img/currency.png) no-repeat 23/@base  -217/@base;
+    background:#f0f0f0 url(../img/currency.png) no-repeat 23/@base  -210/@base;
     background-size: 40/@base;
     top: 50%;
     left: 50%;
@@ -66,7 +66,7 @@ input[type=submit],input[type=reset],input[type=button],input[type=text]{-webkit
 
 footer{
     width: 100%;
-    height: 101/@base;
+    height: 115/@base;
     position: fixed;
     bottom: 0;
     background: white;
@@ -81,7 +81,7 @@ footer dl{
 }
 footer dl dt{
     width: 100%;
-    height: 34/@base;
+    height: 50/@base;
     margin-top: 19/@base;
     overflow: hidden;
 }
@@ -98,8 +98,8 @@ footer dl dd{
     font-size: 22/@base;
 }
 footer dl:first-child img{
-   width: 1rem;
-   height: 40/@base;
+   width: 50/@base;
+   height: 50/@base;
 }
 footer dl:nth-child(2) img{
     width: 36/@base;
