--- a/css/sign.css
+++ b/css/sign.css
@@ -38,6 +38,14 @@ span {
   border-bottom: 0.08rem solid #4285f4;
   color: #4285F4 !important;
 }
+input{ border: 0;}
+input[type=submit],
+input[type=reset],
+input[type=button],
+input[type=text] {
+  -webkit-appearance: none;
+  outline: none;
+}
 .head {
   width: 14.26rem;
   height: 3.96rem;
@@ -112,13 +120,39 @@ span {
   margin-bottom: 0.5rem;
 }
 .sign_cen p {
+  text-indent: 0.4rem;
   display: block;
   width: 100%;
   height: 2.56rem;
   line-height: 2.56rem;
   color: #333333;
   font-size: 0.6rem;
-  text-align: center;
+}
+.inp {
+  width: 13.04rem;
+  height: 1.28rem;
+  margin: 0 auto;
+  overflow: hidden;
+  margin-bottom: 0.2rem;
+}
+#inp {
+  width: 9.74rem;
+  height: 1.24rem;
+  border: 1px solid #ccc;
+  margin-right: 0.24rem;
+  border-radius: 0.1rem;
+  text-indent: 0.2rem;
+  float: left;
+}
+#btn {
+	float: left;
+  width: 2.98rem;
+  height: 1.24rem;
+  background: #4285F4;
+  border: 1px solid #4285F4;
+  border-radius: 0.1rem;
+  color: white;
+  font-size: 0.52rem;
 }
 .sign_img {
   width: 4.92rem;
