--- a/css/sign.less
+++ b/css/sign.less
@@ -113,14 +113,22 @@ span{
     margin-bottom: 25/@base;
 }
 .sign_cen p{
+    text-indent:20/@base;
     display: block;
     width: 100%;
     height: 128/@base;
     line-height: 128/@base;
     color: #333333;
     font-size: 30/@base;
-    text-align: center;
 }
+.inp{
+     width: 652/@base;
+     height: 64/@base;
+     margin: 0 auto;
+     overflow: hidden;
+}
+#inp{ width: 487/@base; height: 62/@base; margin: 1/@base 0; border: 1px solid #ccc; margin-right: 12/@base; border-radius: 5/@base;}
+#btn{ width: 149/@base; height: 100%; background: #4285F4; border-radius: 5/@base; color: white; font-size: 26/@base;}
 .sign_img{
     width: 246/@base;
     height: 246/@base;
