--- a/css/broad.css
+++ b/css/broad.css
@@ -41,10 +41,16 @@ span {
   font-size: 0.44rem !important;
 }
 .banner {
-  width: 15.28rem;
-  height: 7.86rem;
+  width: 15rem;
+  height: 7.5rem;
   box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
   margin-bottom: 0.4rem;
+  overflow: hidden;
+}
+.banner img {
+  height: 9.5rem;
+  width: 15rem;
+  margin-top: -1rem;
 }
 .nav {
   width: 13.98rem;
@@ -168,4 +174,91 @@ span {
   padding: 0 0.06rem;
   float: left;
   margin-top: 0.4rem;
+}
+.mask {
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.bombBox {
+  position: fixed;
+  height: 9.9rem;
+  width: 13.98rem;
+  border-radius: 0.16rem;
+  padding: 0 0.9rem;
+  box-sizing: border-box;
+  background: #fff;
+  bottom: -19.6rem;
+  left: 0.5rem;
+  z-index: 999;
+  transition: all .5s;
+}
+.bombBox li {
+  height: 2.32rem;
+  line-height: 2.32rem;
+  border-bottom: 0.04rem solid #dadada;
+  font-size: 0.64rem;
+  color: #666;
+}
+.bombBox li::after {
+  content: '';
+  clear: both;
+}
+.bombBox li span {
+  float: left;
+  padding-left: 1rem;
+  background: url(../img/yuan.png) no-repeat left 0.9rem;
+  background-size: 0.6rem 0.6rem;
+}
+.bombBox li strong {
+  font-weight: normal;
+  float: right;
+}
+.bombBox .active {
+  color: #4285f4;
+}
+.bombBox .active span {
+  background: url(../img/yuan_xuan.png) no-repeat left 0.9rem;
+  background-size: 0.6rem 0.6rem;
+}
+.bombBox .button {
+  width: 12.18rem;
+  height: 1.8rem;
+  border-radius: 0.16rem;
+  line-height: 1.8rem;
+  text-align: center;
+  font-size: 0.64rem;
+  color: #fff;
+  margin-top: 0.54rem;
+}
+.youhui {
+  border: none !important;
+}
+.youhui.yes {
+  color: #666666;
+}
+.youhui.no {
+  color: #bdbdbd;
+}
+.youhui.yes span {
+  background: url(../img/quan.png) no-repeat left 0.8rem;
+  background-size: 0.64rem 0.74rem;
+}
+.youhui.no span {
+  background: url(../img/no_quan.png) no-repeat left 0.8rem;
+  background-size: 0.64rem 0.74rem;
+}
+.bombBox .quan {
+  background: #4285f4;
+}
+.bombBox .weixin {
+  background: #00b90c url(../img/weixin.png) no-repeat 4.02rem 0.44rem;
+  background-size: 1.08rem 0.86rem;
+  box-sizing: border-box;
+  padding-left: 1.2rem;
 }
