--- a/css/broad.less
+++ b/css/broad.less
@@ -69,9 +69,13 @@ span{ cursor: pointer;}
 .int_tit{
     margin-top: 30/@base;
     width: 584/@base;
-    height: 34/@base;
+    height: 40/@base;
     color: #333333;
     font-size: 34/@base;
+    overflow: hidden;
+    text-overflow:ellipsis; 
+    white-space: nowrap;   
+    line-height: 40/@base;
 }
 .int_p{
     width: 100%;
