--- a/css/zhibo.less
+++ b/css/zhibo.less
@@ -81,6 +81,20 @@ html,body{
      top: 25/@base;
      right: 25/@base;
 }
+.zhi_tu .ban_shi{
+    text-indent: 40/@base;
+    width: 133/@base;
+    height: 38/@base;
+    line-height: 37/@base;
+    color: white;
+    border-radius: 19/@base;
+    font-size: 22/@base;
+    border: 1/@base solid rgba(255,255,255,.3);
+    background-color: rgba(0,0,0,.3);
+    position: absolute;
+    top: 25/@base;
+    right: 25/@base;
+}
 .huifang{
     background:url(../img/huifang.png) no-repeat rgba(0,0,0,.3) 16/@base  8/@base;
     background-size: 11/@base 16/@base;
@@ -203,7 +217,7 @@ html,body{
      width: 85/@base;
      height: 34/@base;
      border:1/@base solid rgba(255,255,255,.3);
-     line-height: 34/@base;
+     line-height: 30/@base;
      position: absolute;
      top: 17/@base;
      right: 17/@base;
@@ -278,4 +292,4 @@ footer{
     left: 0;
     bottom: 0;
 }
- 
+
