--- a/css/live.less
+++ b/css/live.less
@@ -31,7 +31,7 @@ body,html{
         width: 100%;
         transform-origin: left bottom;
         position: absolute;
-        left: -5px;
+        left: -12/@base;
         top: 0;
         z-index: 99;
     }
