--- a/css/broad.less
+++ b/css/broad.less
@@ -120,7 +120,7 @@ span{ cursor: pointer;}
     right: 20/@base;
 }
 .int_img{
-    width: 100%;
+    width: 750/@base;
     height: auto;
 }
 .int_img img{
