--- a/css/live.less
+++ b/css/live.less
@@ -31,7 +31,7 @@ body,html{
         width: 100%;
         transform-origin: left bottom;
         position: absolute;
-        left: -12/@base;
+        left: 0/@base;
         top: 0;
         z-index: 99;
     }
@@ -52,9 +52,10 @@ body,html{
         height: 60/@base;
         line-height: 35/@base;
         background: url(../img/time.png) no-repeat;
-        padding-left: 80/@base;
+        padding-left: 60/@base;
         box-sizing: border-box;
-        width: 450/@base;
+        width: 470/@base;
+        display: none;
         span{
             color: @blue;
             font-size: 48/@base;
